src/test/ui/impl-header-lifetime-elision/trait-elided.stderr
error[E0726]: implicit elided lifetime not allowed here
  --> $DIR/trait-elided.rs:5:6
   |
LL | impl MyTrait for u32 {
   |      ^^^^^^^- help: indicate the anonymous lifetime: `<'_>`
   |
   = note: assuming a `'static` lifetime...

error[E0106]: missing lifetime specifier
  --> $DIR/trait-elided.rs:5:6
   |
LL | impl MyTrait for u32 {
   |      ^^^^^^^ expected named lifetime parameter
   |
help: consider introducing a named lifetime parameter
   |
LL | impl<'a> MyTrait<'a> for u32 {
   |     ++++ ~~~~~~~~~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0106`.
